--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -9,7 +9,7 @@ ENV BUILD_PREFIX=/app
 
 ADD . ${BUILD_PREFIX}
 
-RUN apk add --no-cache bash ffmpeg espeak ffmpeg-libavcodec \
+RUN apk add --no-cache bash ffmpeg espeak ffmpeg-dev \
     && cd ${BUILD_PREFIX} \
     && cp config-template.json config.json \
     && /usr/local/bin/python -m pip install --no-cache --upgrade pip \
