--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -9,7 +9,7 @@ ENV BUILD_PREFIX=/app
 
 ADD . ${BUILD_PREFIX}
 
-RUN apk add --no-cache bash espeak ffmpeg ffmpeg-codecs \
+RUN apk add --no-cache bash espeak ffmpeg opencore-amr \
     && cd ${BUILD_PREFIX} \
     && cp config-template.json config.json \
     && /usr/local/bin/python -m pip install --no-cache --upgrade pip \
